Revert "fix: overflow"
5b53ff1f37b998d01290d79ad49d9085bf58d218

--- a/src/assets/styles/components/_nav.scss
+++ b/src/assets/styles/components/_nav.scss
@@ -350,6 +350,7 @@
 @include breakpoint-up(md) {
   .nav {
     height: rem(80);
+    margin-right: rem(-20);
   }
 
   .nav .menu-toggle {
